tests/invalid/invalid_symbol.lang
fn main() {
    var hello: i32 = a;
}
